--- a/index.src.html
+++ b/index.src.html
@@ -1399,16 +1399,29 @@ NOTE: this section needs work. Current wording assumes a VideoFrame can always
   </dd>
   <dt><dfn attribute for=VideoFrame>planes</dfn></dt>
   <dd>
-      Holds pixel data data, laid out as described by format and Plane attributes.
+    Holds pixel data data, laid out as described by format and Plane
+        attributes.
   </dd>
   <dt><dfn attribute for=VideoFrame>codedWidth</dfn></dt>
-  <dd>Width of the VideoFrame in pixels, prior to any cropping or aspect ratio adjustments.</dd>
+  <dd>
+    Width of the VideoFrame in pixels, prior to any cropping or aspect ratio
+        adjustments.
+  </dd>
   <dt><dfn attribute for=VideoFrame>codedHeight</dfn></dt>
-  <dd>Height of the VideoFrame in pixels, prior to any cropping or aspect ratio adjustments.</dd>
+  <dd>
+    Height of the VideoFrame in pixels, prior to any cropping or aspect ratio
+        adjustments.
+  </dd>
   <dt><dfn attribute for=VideoFrame>cropLeft</dfn></dt>
-  <dd>The number of pixels to remove from the left of the VideoFrame, prior to aspect ratio adjustments.</dd>
+  <dd>
+    The number of pixels to remove from the left of the VideoFrame, prior to
+        aspect ratio adjustments.
+  </dd>
   <dt><dfn attribute for=VideoFrame>cropTop</dfn></dt>
-  <dd>The number of pixels to remove from the top of the VideoFrame, prior to aspect ratio adjustments.</dd>
+  <dd>
+    The number of pixels to remove from the top of the VideoFrame, prior to
+        aspect ratio adjustments.
+  </dd>
   <dt><dfn attribute for=VideoFrame>cropWidth</dfn></dt>
   <dd>The width of pixels to include in the crop, starting from cropLeft.</dd>
   <dt><dfn attribute for=VideoFrame>cropHeight</dfn></dt>
@@ -1418,3 +1431,56 @@ NOTE: this section needs work. Current wording assumes a VideoFrame can always
   <dt><dfn attribute for=VideoFrame>displayHeight</dfn></dt>
   <dd>Height of the VideoFrame when displayed.</dd>
 </dl>
+
+### Methods ###{#videoframe-methods}
+<dfn method for=VideoFrame>destroy()</dfn>
+Immediately frees system resources. Destruction applies to all references,
+    including references that are serialized and passed across Realms.
+
+NOTE: Use clone() to create a deep copy. Cloned frames have their own lifetime
+    and will not be affected by destroying the original frame.
+
+When invoked, run these steps:
+1. If {{VideoFrame/[[detached]]}} is true, throw an {{InvalidStateError}}.
+2. Remove all {{Planes}} from {{VideoFrame/planes}} and release associated
+    memory.
+3. Assign true to the {{VideoFrame/[[detached]]}} internal slot.
+
+<dfn method for=VideoFrame>clone()</dfn>
+Creates a new {{VideoFrame}} with a separate lifetime containing a deep copy of
+    this frame’s resources.
+
+NOTE:  VideoFrames may require a large amount of memory. Use
+    {{VideoFrame/clone()}} sparingly. Authors should take care to manage frame
+    lifetimes by calling {{VideoFrame/destroy()}} immediately when frames are no
+    longer needed.
+
+When invoked, run the following steps:
+1. If the value of the {{VideoFrame/[[detatched]]}} slot is true, return a
+    Promise rejected with a newly created {{InvalidStateError}}.
+2. Let |p| be a new Promise.
+3. In parallel, resolve |p| with the result of running the <a>Clone Frame</a>
+    algorithm with <a>this</a>.
+4. Return |p|.
+
+<dfn method for=VideoFrame>createImageBitmap(options)</dfn>
+Creates an ImageBitmap from this {{VideoFrame}}.
+
+When invoked, run these steps:
+1. Let |p| be a new Promise.
+2. If either |options|'s {{ImageBitmapOptions/resizeWidth}} or
+    {{ImageBitmap/resizeHeight}} is present and is 0, then return |p| rejected
+    with an {{InvalidStateError}} {{DOMException}}.
+3. If the <a>this'</a> {{VideoFrame/[[detached]]}} internal slot is set to true,
+    then return |p| rejected with an {{InvalidStateError}} {{DOMException}}.
+4. Let |imageBitmap| be a new {{ImageBitmap}} object.
+5. Set |imageBitmap|'s bitmap data to a copy of the {{VideoFrame}} pixel data,
+    at the frame's intrinsic width and intrinsic height (i.e., after any
+    aspect-ratio correction has been applied), cropped to the source rectangle
+    with formatting.
+6. If the origin of |imageBitmap|'s image is not same origin with entry settings
+    object's origin, then set the origin-clean flag of |imageBitmap|'s bitmap to
+    false.
+7. Run this step in parallel:
+  1. Resolve p with imageBitmap.
+
