--- a/index.src.html
+++ b/index.src.html
@@ -515,8 +515,10 @@ AudioEncoder Interface {#audioencoder-interface}
 [Exposed=(Window,Worker)]
 interface AudioEncoder {
   constructor(AudioEncoderInit init);
+
   readonly attribute CodecState state;
   readonly attribute long encodeQueueSize;
+
   undefined configure(AudioEncoderConfig config);
   undefined encode(AudioFrame frame);
   Promise<undefined> flush();
@@ -582,22 +584,51 @@ Methods {#audioencoder-methods}
     When invoked, run these steps:
     1. If |config| is not a <a>valid AudioEncoderConfig</a>, throw a
         {{TypeError}}.
-    2. Run the <a>Configure Encoder</a> algorithm with |config|.
+    2. If {{AudioEncoder/state}} is `"closed"`, throw an {{InvalidStateError}}.
+    3. If the user agent cannot provide a codec implementation to support
+        |config|, throw a {{NotSupportedError}}.
+    4. Set {{AudioEncoder/state}} to `"configured"`.
+    5. <a>Queue a control message</a> to configure the encoder using |config|.
+    6. <a>Run the control message processing loop</a>.
+
+    Running a control message to configure the encoder means running these
+    steps:
+    1. Assign {{AudioEncoder/[[codec implementation]]}} with an implementation
+        supporting |config|.
   </dd>
 
   <dt><dfn method for=AudioEncoder>encode(frame)</dfn></dt>
   <dd>
     <a>Enqueues a control message</a> to encode the given |frame|.
 
-    NOTE: This method will destroy the VideoFrame. Authors who wish to retain a
+    NOTE: This method will destroy the AudioFrame. Authors who wish to retain a
     copy, should call `frame.clone()` prior to calling encode().
 
     When invoked, run these steps:
     1. If the value of |frame|'s {{AudioFrame/[[detached]]}} internal slot is
         `true`, throw a {{TypeError}}.
-    2. Let |output algorithm| be the <a>EncodedAudioChunk Output</a> algorithm.
-    3. Run the <a>Encode Frame</a> algorithm with |frame| and
-        |output algorithm|.
+    2. If {{AudioEncoder/state}} is not `"configured"`, throw an
+        {{InvalidStateError}}.
+    3. Let |frameClone| hold the result of running the <a>Clone Frame</a>
+        algorithm with |frame|.
+    4. Destroy the original |frame| by invoking `frame.destroy()`.
+    5. Increment {{AudioEncoder/encodeQueueSize}}.
+    6. <a>Queue a control message</a> to encode |frameClone|.
+    7. Run the control message processing loop.
+
+    Running a control message to encode the frame means running these steps.
+    1. Decrement {{AudioEncoder/encodeQueueSize}}.
+    2. Let |codec implementation queue| be the result of starting a new
+        <a>parallel queue</a>.
+    3. Enqueue the following steps to |codec implementation queue|:
+        1. Attempt to use {{AudioEncoder/[[codec implementation]]}} to encode
+            |frameClone|.
+        2. If encoding results in an error, queue a task on the media element
+            task source to run the <a>Close AudioEncoder</a> algorithm with
+            {{EncodingError}}.
+        3. Otherwise, for each encoded audio data |output|, queue a task on the
+            media element task source to run the <a>Output EncodedAudioChunk</a>
+            algorithm with |output|.
   </dd>
 
   <dt><dfn method for=AudioEncoder>flush()</dfn></dt>
@@ -606,8 +637,20 @@ Methods {#audioencoder-methods}
     and emits all outputs.
 
     When invoked, run these steps:
-    1. Let |output algorithm| be the <a>EncodedAudioChunk Output</a> algorithm.
-    2. Run the <a>Flush</a> algorithm with |output algorithm|.
+    1. If {{AudioEncoder/state}} is not `"configured"`, return a Promise
+        rejected with a newly created {{InvalidStateError}}.
+    2. Let |promise| be a new Promise.
+    3. <a>Queue a control message</a> to flush the codec with |promise|.
+    4. Return |promise|.
+
+    Running a control message to flush the codec means running these steps
+        with |promise|.
+    1. Signal {{AudioEncoder/[[codec implementation]]}} to emit all pending
+        outputs.
+    2. For each encoded audio data |output|, queue a task on the media element
+        task source to run the <a>Output EncodedAudioChunk</a> algorithm with
+        |output|.
+    3. Queue a task on the media element task source to resolve |promise|.
   </dd>
 
   <dt><dfn method for=AudioEncoder>reset()</dfn></dt>
@@ -616,7 +659,7 @@ Methods {#audioencoder-methods}
     <a>control messages</a> in the <a>control message queue</a>, and all pending
     callbacks.
 
-    When invoked, run the <a>Reset</a> algorithm.
+    When invoked, run the <a>Reset AudioEncoder</a> algorithm.
   </dd>
 
   <dt><dfn method for=AudioEncoder>close()</df></dt>
@@ -624,10 +667,47 @@ Methods {#audioencoder-methods}
     Immediately aborts all pending work and releases system resources. Close is
     permanent.
 
-    When invoked, run the <a>Close</a> algorithm.
+    When invoked, run the <a>Close AudioEncoder</a> algorithm.
   </dd>
 </dl>
 
+Algorithms {#audioencoder-algorithms}
+-------------------------------------
+<dl>
+  <dt><dfn>Output EncodedAudioChunk</dfn> (with |output|)</dt>
+  <dd>
+    Run these steps:
+    1. Let |chunkInit| be an {{EncodedAudioChunkInit}} with the following keys:
+        1. Let {{EncodedAudioChunkInit/data}} contain the encoded audio data
+            from |output|.
+        2. Let {{EncodedAudioChunkInit/type}} be the {{EncodedAudioChunkType}}
+            of |output|.
+        3. Let {{EncodedAudioChunkInit/timestamp}} be the
+            {{AudioFrame/timestamp}} from the AudioFrame associated with
+            |output|.
+    2. Let |chunk| be a new {{EncodedAudioChunk}} constructed with |chunkInit|.
+    3. Invoke {{AudioEncoder/[[output callback]]}} with |chunk|.
+  </dd>
+  <dt><dfn>Reset AudioEncoder</dfn></dt>
+  <dd>
+    Run these steps:
+    1. If {{AudioEncoder/state}} is `“closed”`, throw an {{InvalidStateError}}.
+    2. Set {{AudioEncoder/state}} to `“unconfigured”`.
+    3. Signal {{AudioEncoder/[[codec implementation]]}} to cease producing
+        output for the previous configuration.
+    4. <a>Reset the control message queue</a>.
+  </dd>
+  <dt><dfn>Close AudioEncoder</dfn></dt>
+  <dd>
+    Run these steps:
+    1. Run the <a>Reset AudioEncoder</a> algorithm.
+    2. Set {{AudioEncoder/state}} to `“closed”`.
+    3. Clear {{AudioEncoder/[[codec implementation]]}} and release associated
+        system resources.
+    4. If |error| is set, invoke the {{AudioEncoder/[[error callback]]}} with
+        |error|.
+  </dd>
+</dl>
 
 VideoEncoder Interface {#videoencoder-interface}
 ================================================
@@ -839,18 +919,6 @@ Running a control message to encode the frame means running these steps.
         source to run the codec error algorithm.
     3. Otherwise, for each output, queue a task on the media element task source
         to run the provided output algorithm.
-
-<dfn>EncodedAudioChunk Output</dfn>{#encodedaudiochunk-output-algorithm}
-------------------------------------------------------------------------
-Run these steps:
-1. If `state` is not `“configured”`, abort the following steps.
-2. Let |chunkInit| be an {{EncodedAudioChunkInit}} with the following keys:
-    1. Let data contain the encoded audio data.
-    2. Let type be the EnocdedAudioChunkType of the encoded audio data.
-    3. Let timestamp be the timestamp from the associated input AudioFrame.
-    4. Let duration be the duration from the associated input AudioFrame.
-3. Let |chunk| be a new {{EncodedAudioChunk}} constructed with |chunkInit|.
-4. Invoke **[[output callback]]** with |chunk|.
 
 <dfn>EncodedVideoChunk Output</dfn>{#encodedvideochunk-output-algorithm}
 ------------------------------------------------------------------------
